--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.71.1",
+    "swiper": "^11.0.6",
     "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18",
+    "@types/swiper": "^6.0.0",
     "@types/three": "^0.161.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
