--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@studio-freight/hamo": "^0.6.28",
     "@studio-freight/lenis": "^1.0.34",
     "@studio-freight/react-lenis": "^0.0.43",
+    "@types/gsap": "^3.0.0",
     "gsap": "^3.12.5",
     "lenis": "^0.0.2",
     "locomotive-scroll": "^5.0.0-beta.11",
