--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@studio-freight/lenis": "^1.0.34",
     "@studio-freight/react-lenis": "^0.0.43",
     "@types/gsap": "^3.0.0",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "lenis": "^0.0.2",
     "locomotive-scroll": "^5.0.0-beta.11",
