--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gsap": "^3.12.5",
     "lenis": "^0.0.2",
     "locomotive-scroll": "^5.0.0-beta.11",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.71.1",
